@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<portlets xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+<portlets xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+    i18n:domain="plone">
 
  <!-- Portlet type registrations -->
 
