@@ -4,6 +4,10 @@ Changelog
 1.9 (unreleased)
 ----------------
 
+* Added German translation and moved portlet title and description
+  to i18:domain plone to make them translateable in the
+  add portlet dropdown, too [fRiSi]
+  
 1.8 (2013-05-02)
 ----------------
 
